# nested_sampling

./: .gitignore  CMakeLists.txt  Explore.m  Prior.m  Results.m  apply.m  lighthouse.c  lighthouse.csv  lighthouse.h  local_float.h  logLhood.m  logplus.m  main.m  nested.c
